k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gmc-backend-service
spec:
  type: NodePort
  selector:
    app: gmc-backend-integration
  ports:
    - port: 5001
      targetPort: 5001
